<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>voxblox_rviz_plugin</name>
  <version>0.0.0</version>
  <description>RViz plugin for displaying incremental voxblox mesh messages.</description>
  <maintainer email="ztaylorr@ethz.ch">Zachary Taylor</maintainer>
  <license>BSD</license>
  <author>Zachary Taylor</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rviz</depend>
  <depend>voxblox</depend>
  <depend>voxblox_msgs</depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
